made some changes

--- a/first.tex
+++ b/first.tex
@@ -1,16 +1,16 @@
 \documentclass{ximera}
 
-\title{This is the sample!}
-\author{A Ximera Author}
+\title{Sample Ximera Page}
+\author{Stan Kruse}
 
 \begin{abstract}
-  This is a place to get started.
+  My first Ximera page
 \end{abstract}
 
 \begin{document}
 \maketitle
 
-Here's a sample question.
+I have a question for you.
 
 \begin{problem}
 \begin{multipleChoice}
@@ -31,6 +31,9 @@ Here's a sample question.
 
 \begin{problem}
    The tolerance 17 means $3421 \approx \answer[tolerance=17]{3421}$
+\begin{hint}
+This is a hint
+\end{hint}
 \end{problem}
 
 \end{document}
