--- a/first.tex
+++ b/first.tex
@@ -11,7 +11,7 @@
 \maketitle
 
 I have a question for you.
-
+\begin{shuffle}
 \begin{problem}
 \begin{multipleChoice}
 \choice{Incorrect}
@@ -35,6 +35,7 @@ I have a question for you.
 This is a hint
 \end{hint}
 \end{problem}
+\end{shuffle}
 
 \youtube{MyUU3X1r9ak}
 
